# trabalho-mata54-ii

./: .cproject  .gitignore  .project  CMakeLists.txt  CTestTestfile.cmake  README.md  main  main.c  main_debug
Testing/Temporary/: CTestCostData.txt
tests/: saida01  saida02  saida03  teste02.b  teste03.b
